foundation-objs/main/default/objects/Workspace__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Workspaces</relationshipLabel>
    <relationshipName>Workspaces</relationshipName>
    <type>Lookup</type>
</CustomField>