foundation-objs/main/default/objects/Workspace__c/fields/DAID_EWB__c.field-meta.xml
<CustomField>
    <fullName>DAID_EWB__c</fullName>
    <label>DAID - EWB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>