foundation-objs/main/default/objects/Workspace__c/fields/DAID_GST__c.field-meta.xml
<CustomField>
    <fullName>DAID_GST__c</fullName>
    <label>DAID - GST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>