foundation-objs/main/default/objects/Workspace__c/fields/Input_Flag__c.field-meta.xml
<CustomField>
    <fullName>Input_Flag__c</fullName>
    <label>Input Flag</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Generated</fullName>
            </value>
            <value>
                <fullName>User Input</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>