foundation-objs/main/default/objects/Workspace__c/fields/Root_Workspace__c.field-meta.xml
<CustomField>
    <fullName>Root_Workspace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Root Workspace ?</label>
    <type>Checkbox</type>
</CustomField>