foundation-objs/main/default/objects/Workspace__c/fields/Workspace_ID__c.field-meta.xml
<CustomField>
    <fullName>Workspace_ID__c</fullName>
    <label>Workspace ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>