foundation-objs/main/default/objects/Workspace__c/fields/Workspace_Type__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Type__c</fullName>
    <label>Workspace Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Tax Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>